--- a/templates/pages/services.html
+++ b/templates/pages/services.html
@@ -21,7 +21,6 @@
         <!-- Main title -->
         <div class="main-title text-center">
             <h1>Our <span>Services</span></h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod</p>
         </div>
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6">
@@ -32,7 +31,7 @@
                     </div>
                     <div class="detail">
                         <h3>Free Support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>Get Best 24X7 Car Roadside Assistance Delhi NCR at Crossroads and drive your car Free DMS, Technical Training</p>
                     </div>
                 </div>
             </div>
@@ -44,7 +43,8 @@
                     </div>
                     <div class="detail">
                         <h3>Super Fast</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>super fast services, a and team support at the current time that will help you for faster services of you car</p>
+                        
                     </div>
                 </div>
             </div>
@@ -56,7 +56,7 @@
                     </div>
                     <div class="detail">
                         <h3>Repairing</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>car service is a maintenance check-up that's carried out at set time intervals or after the vehicle has travelled a certain miles</p>
                     </div>
                 </div>
             </div>
@@ -68,7 +68,7 @@
                     </div>
                     <div class="detail">
                         <h3>AIR conditioning</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>Air conditioning is the process of removing heat and controlling the humidity of air in an enclosed space</p>
                     </div>
                 </div>
             </div>
@@ -80,7 +80,7 @@
                     </div>
                     <div class="detail">
                         <h3>Oil Change</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>every 3,000 miles or every six months. This can vary based on your driving habits, your driving frequency,</p>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="detail">
                         <h3>Engine Repair</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>emoving the engine block and disassembling it. Cleaning and inspection to determine the condition of the engine.</p>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     </div>
                     <div class="detail">
                         <h3>Dealership</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>A business is considered a dealership if its owner is authorized to sell a certain item It's most common item</p>
                     </div>
                 </div>
             </div>
@@ -116,7 +116,7 @@
                     </div>
                     <div class="detail">
                         <h3>Security</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                       <p>Security is defined as being free from danger, or feeling safe.we provide full Security</p>
                     </div>
                 </div>
             </div>
@@ -128,7 +128,7 @@
                     </div>
                     <div class="detail">
                         <h3>Trusted Agents</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+                        <p>Trusted Agent means a Contractor employee with system, technical, managerial, or other knowledge relevant to the security </p>
                     </div>
                 </div>
             </div>
