--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -3,8 +3,8 @@
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand company-logo" href="{% url 'home' %}">
-                <!-- <img src=""> -->
-                Carzone
+                <!-- <img src="{% static 'img/' %}" alt="My image"> -->
+                <h2>CarZone</h2>
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar" aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="fa fa-bars"></span>
